--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,12 +114,12 @@ p{
 }
 
 .yellow{
-	color: #c9fdfb !important;
+	color: #C9F4FD !important;
 }
 
 .bolder {
     font-weight: 900;
-    color:#c9fdfb;
+    color:#C9F4FD;
 }
 
 .uppercase{
@@ -225,7 +225,7 @@ section{
     top: 0;
     left: 0;
     height: 100%;
-    z-index: 1;
+    z-index: 0;
     background-image: url(../img/dot.gif);
     opacity: 0.06;
 }
@@ -445,7 +445,7 @@ a{
     text-align: center;
     font-weight: 400 !important;
     letter-spacing: 5px;
-    color: #c9fdfb;
+    color: #C9F4FD;
     font-size: 25px;
 }
 
@@ -728,7 +728,7 @@ ul.tags li a:hover{
 
 .box-logo {
     display: block;
-    padding: 20px;
+    padding: 10px;
     margin-left: 50px;
 }
 
@@ -909,15 +909,15 @@ ul.tags li a:hover{
 }
 
 
-/* box-intro
+/*#box-intro
 ==================================================*/
 
-.box-intro {
+#box-intro {
     text-align: center;
     display: table;
     height: 100vh;
     width: 100%;
-    background-image: url(../img/beauty.jpg);
+    background-image: url(../img/gif.gif);
 		background-attachment: fixed;
     background-position: center center;
     -webkit-background-size: cover;
@@ -938,12 +938,12 @@ ul.tags li a:hover{
 		z-index: 1;
 }
 
-.box-intro .table-cell {
+#box-intro .table-cell {
     display: table-cell;
     vertical-align: middle;
 }
 
-.box-intro em {
+#box-intro em {
     font-style: normal;
     text-transform: uppercase
 }
@@ -953,10 +953,10 @@ b{
 }
 
 b i:last-child {
-    color: #c9fdfb !important;
+    color: #C9F4FD !important;
 }
 
-.box-intro h1{
+#box-intro h1{
 		font-size: 40px;
 	  margin-top: 35px;
 	  color: #333;
@@ -964,7 +964,7 @@ b i:last-child {
 		font-weight: 700;
 }
 
-.box-intro h3 {
+#box-intro h3 {
 		font-family: "Cantarell", sans-serif;
 		font-size: 14px;
 		letter-spacing: 10px;
@@ -1180,12 +1180,12 @@ b i:last-child {
 
 @media (max-width: 992px) {
 
-		.box-intro h1 {
+		#box-intro h1 {
 	    font-size: 25px;
 	    letter-spacing: 5px;
 	}
 
-	.box-intro h3 {
+	#box-intro h3 {
     font-size: 12px;
     letter-spacing: 8px;
 	}
@@ -1391,7 +1391,7 @@ footer a:hover {
 
 .facts {
 		padding: 100px 0 50px 0;
-		background-color: #c9fdfb;
+		background-color: #C9F4FD;
 		border-top: 15px double #ffffff
 }
 
@@ -1450,7 +1450,7 @@ footer a:hover {
 -------------------------------- */
 .features {
 	padding: 100px 0 100px 0;
-	background-color: #c9fdfb;
+	background-color: #C9F4FD;
 	border-top: 15px double #fff;
 }
 
@@ -1534,18 +1534,6 @@ footer a:hover {
 	  font-weight: 700;
 	  margin-top: -145px;
 	  margin-bottom: 100px;
-}
-
-.top-right-separator {
-    width: 0;
-    position: absolute;
-    top: -180px;
-    right: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 0 180px 100vw;
-    border-color: transparent transparent #fff transparent;
-    z-index: 1;
 }
 
 #services .top-right-separator {
@@ -1647,7 +1635,7 @@ footer a:hover {
 	display: inline-block;
 	background-color: #000;
 	padding: 5px;
-	color:#c9fdfb;
+	color:#C9F4FD;
 	margin-top: 5px;
 	-webkit-transform:translateY(20px);
 	    -ms-transform:translateY(20px);
@@ -1679,7 +1667,7 @@ footer a:hover {
 -------------------------------- */
 
 .team {
-		padding: 0 0 100px;
+		padding: 0 0 10px;
 }
 
 
@@ -1885,7 +1873,7 @@ footer a:hover {
 
 -------------------------------- */
  #clients{
-	 background-color: #c9fdfb;
+	 background-color: #C9F4FD;
 	 padding: 0 0 50px;
  }
 
@@ -2094,7 +2082,7 @@ footer a:hover {
 }
 
 .site-hero_3 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2129,7 +2117,7 @@ footer a:hover {
 }
 
 .site-hero_4 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2164,7 +2152,7 @@ footer a:hover {
 }
 
 .site-hero_5 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2199,7 +2187,7 @@ footer a:hover {
 }
 
 .site-hero_6 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2234,7 +2222,7 @@ footer a:hover {
 }
 
 .site-hero_7 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2269,7 +2257,7 @@ footer a:hover {
 }
 
 .site-hero_8 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2304,7 +2292,7 @@ footer a:hover {
 }
 
 .site-hero_9 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2339,7 +2327,7 @@ footer a:hover {
 }
 
 .site-hero_10 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2374,7 +2362,7 @@ footer a:hover {
 }
 
 .site-hero_11 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2409,7 +2397,7 @@ footer a:hover {
 }
 
 .site-hero_12 h2{
-    color: #c9fdfb;
+    color: #C9F4FD;
     text-transform: uppercase;
     font-size: 25px;
     line-height: 2;
@@ -2626,7 +2614,7 @@ ul.services-list li{
 	  bottom: -22px;
 	  left: -22px;
 	  z-index: -1;
-	  color: #c9fdfb;
+	  color: #C9F4FD;
 	  font-weight: bold;
 	  font-size: 90px;
 }
@@ -2658,7 +2646,7 @@ ul.services-list li{
 
 .srv_pricing {
 		padding: 0 0 100px;
-		background: #c9fdfb;
+		background: #C9F4FD;
 		border-bottom: 15px double #fff;
 }
 
@@ -2811,10 +2799,27 @@ ul.services-list li{
 hr.space-blue{
     width: 35vw;
     margin: 0 auto;
-    border: solid 3px #c9fdfb;
+    border: solid 3px #C9F4FD;
     box-shadow: 5px 5px 3px #9d84bd;
 }
 
 .no-transp{
     background: rgba(255, 255, 255, 0.7) !important;
 }
+
+.google-maps {
+        position: relative;
+        padding-bottom: 20em; /* This is the aspect ratio*/
+        height: 0;
+        overflow: hidden;
+    }
+    .google-maps iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+    }
+    a.facebook:hover{
+        color: #C9F4FD;
+    }
